--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>This is really good course indeed!</h1>
+<h1>This is really good course indeed! I am thrilled.</h1>
 
 
 </body>
